--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link href="sticky-footer.css" rel="stylesheet">
 
         <!-- Additional CSS must be placed after Bootstrap CSS -->
         <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
@@ -15,107 +16,153 @@
 
         <title>Flora</title>
     </head>
-    <body>
-        <header class="jumbotron">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <a href="index.html" role="button"><h1 class="display-3">flora</h1></a>
+    <body class="d-flex flex-column h-100">
+            <header class="jumbotron">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <a href="index.html" role="button"><h1 class="display-3">flora</h1></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
+            </header>
 
-        <nav class="navbar navbar-light bg-light navbar-expand-sm">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><i class="fa-brands fa-pagelines fa-2x" aria-hidden="true"></i></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#floraNav" aria-controls="floraNav" aria-expanded="false" aria-label="toggle-navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="floraNav">
-                    <ul class="navbar-nav me-auto m-auto mb-2 ">
-                        <li class="nav-item px-3">
-                          <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item px-3">
-                          <a class="nav-link" href="plants.html">Plants</a>
-                        </li>
-                        <li class="nav-item px-3">
-                          <a class="nav-link disabled">Gifts</a>
-                        </li>
-                        <li class="nav-item px-3">
-                          <a class="nav-link" href="aboutus.html">About Us</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control-sm me-2" type="search" id="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+            <nav class="navbar navbar-light bg-light navbar-expand-md">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><i class="fa-brands fa-pagelines fa-2x" aria-hidden="true"></i></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#floraNav" aria-controls="floraNav" aria-expanded="false" aria-label="toggle-navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="floraNav">
+                        <ul class="navbar-nav me-auto m-auto mb-2 ">
+                            <li class="nav-item px-3">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item px-3">
+                            <a class="nav-link" href="plants.html">Plants</a>
+                            </li>
+                            <li class="nav-item px-3">
+                            <a class="nav-link disabled">Gifts</a>
+                            </li>
+                            <li class="nav-item px-3">
+                            <a class="nav-link disabled">Plant Care</a>
+                            </li>
+                            <li class="nav-item px-3">
+                            <a class="nav-link" href="aboutus.html">About Us</a>
+                            </li>
+                        </ul>
+                        <div><a class="btn" role="button"><i class="fa-solid fa-user"></i></a></div>
+                        <div><a class="btn" role="button"><i class="fa-solid fa-cart-shopping"></i></a></div>
+                        <form class="d-flex">
+                            <input class="form-control-sm me-2" type="search" id="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
-        <div id="featuredPlants" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/annie-spratt-ncQ2sguVlgo-unsplash.jpg" class="d-block w-100 img-resize img-fluid"alt="Succulents-Photo by Annie Spratt">
-                    <div class="carousel-caption d-none d-md-block m-auto">
-                    <h5>Succulents</h5>
-                    <p>Hardly thirsty</p>
+                    <!-- Vertically centered modal -->
+        <div id="promotionModal" class="modal fade">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                          <div class="modal-title"></div>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container-fluid">
+                            <h2>Get 15% off your first order</h2><p>When you sign up for our newsletter</p>
+                            <form>
+                                <div class="form-row mb-3">
+                                    <input type="email" class="form-control" id="newsletterEmail" placeholder="email">
+                                </div>
+                                <div class="form-row text-center">
+                                    <button type="submit" class="btn btn-sm btn-success">Sign Up</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="img/gaelle-marcel-yO9ZVNFbpao-unsplash.jpg" class="d-block w-100 img-resize img-fluid" alt="Cactus-Photo by Gaelle Marcel">
-                    <div class="carousel-caption d-none d-md-block m-auto">
-                    <h5>Practically Unkillable</h5>
-                    <p>Prickly and cute</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/kelsey-brown-S_J4FRUo5ZQ-unsplash.jpg" class="d-block w-100 img-resize img-fluid" alt="Pothos in gold pot-Photo by Kelsey Brown">
-                    <div class="carousel-caption d-none d-md-block m-auto">
-                    <h5>Bring Life to Any Room</h5>
-                    <p>Add color with the Pothos plant</p>
-                </div>
             </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#featuredPlants" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#featuredPlants" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-            </button>
         </div>
 
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4 offset-sm-4 ml-auto">
-                        <ul class="list-unstyled">
-                            <li><a href="aboutus.html" class="text-white">about us</a></li>
-                            <li><a href="https://www.nrdc.org/" class="text-white">NRDC</a></li>
-                        </ul>
+    <main class="flex-shrink-0">
+        <div class="row col col-lg-7 mx-lg-auto pb-lg-5">
+            <div id="featuredPlants" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/annie-spratt-ncQ2sguVlgo-unsplash.jpg" class="featurette-img mx-auto" width="100%" height="100%" alt="Succulents-Photo by Annie Spratt">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/gaelle-marcel-yO9ZVNFbpao-unsplash.jpg" class="img-fluid" alt="Cactus-Photo by Gaelle Marcel">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/kelsey-brown-S_J4FRUo5ZQ-unsplash.jpg" class="img-fluid" alt="Pothos in gold pot-Photo by Kelsey Brown">
+                        </div>
                     </div>
-                    <div class="col-sm-2 offset-sm-2">
-                        <a role="button" class="btn" href="http://instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                        <a role="button" class="btn" href="http://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a role="button" class="btn" href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-                        <a role="button" class="btn" href="http://tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+                <button class="carousel-control-prev" type="button" data-bs-target="#featuredPlants" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#featuredPlants" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </main>
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm ml-auto">
+                    <ul class="list-unstyled">
+                        <li class="text-white">Company</li>
+                        <li><a href="aboutus.html" class="text-white">about us</a></li>
+                        <li><a href="#" class="text-white">Contact Us</a></li>
+                        <li><a href="#" class="text-white">Corporate Orders</a></li>
+                        <li><a href="https://www.nrdc.org/" class="text-white">NRDC</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm ml-auto">
+                    <ul class="list-unstyled">
+                        <li class="text-white">Support</li>
+                        <li><a href="#" class="text-white">Help/FAQ</a></li>
+                        <li><a href="#" class="text-white">Track your Order</a></li>
+                        <li><a href="#" class="text-white">Shipping</a></li>
+                        <li><a href="#" class="text-white">Returns</a></li>
+                    </ul>
+                </div>
+                <div class="socialIcons col-sm">
+                    <div class="row">
+                        <div class="col-12">
+                            <ul class="list-unstyled">
+                                <li class="text-white">Plant Care</li>
+                                <li><a href="#" class="text-white">Plant Lookup</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <a role="button" class="px-1" href="http://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                            <a role="button" class="px-1" href="http://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a role="button" class="px-1" href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                            <a role="button" class="px-1" href="http://tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
 
         <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
